add traversal utils api